@@ -1,6 +1,7 @@
 Change log next version
 -----------------------
-Maven no longer adds classpath to jar manifests when building PowerMock (issue 413).
+* Maven no longer adds classpath to jar manifests when building PowerMock (issue 413).
+* PowerMockRunner now supports both MethodRules and TestRules to comply with JUnit 4.11 (thanks to "Boris Code" for the patch) (issue 419).
 
 Change log 1.5 (2012-12-04)
 ---------------------------
